2001-08-29  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/h8300.md (anonymous movhi pattern): Don't move
	(reg n) to (mem (pre_dec (reg n)).
	(anonymous movsi pattern): Likewise.

2001-08-29  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/h8300.h (RETURN_ADDR_RTX): New.

2001-08-29  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/lib1funcs.asm: Fix comment typos.

2001-08-28  Richard Henderson  <rth@redhat.com>

	* config/ia64/ia64.md (andcmbi3, iorcmbi3): Fix typos.
	(one_cmplbi2 splitter): Remove redundant test.

2001-08-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* config/i386/cygwin.h (BIGGEST_FIELD_ALIGNMENT): Set to 64.

2001-08-24  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.c (rs6000_initialize_trampoline): Function
	descriptor members are pointer size, not constant 4.

2001-08-23  Neil Booth  <neil@daikokuya.demon.co.uk>

	* cppmacro.c (enter_macro_context): Push macro expansions even
	if empty.

2001-08-23  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/h8300.md (zero_extendqihi2): Correct the insn
	length.

2001-08-19  Release Manager

	* GCC 3.0.1 Released.

2001-08-19  Release Manager

	* GCC 3.0.1 Released.

2001-08-17  Janis Johnson  <janis187@us.ibm.com>

	* doc/install.texi (Install GCC): Add links to build status pages.
	(Specific): Ditto.
	(Final install): Ditto; request updates for specific info

2001-08-17  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/invoke.texi (Optimize Options): The default for 
	-finline-limit is 600.

2001-08-16  Joel Sherrill <joel@OARcorp.com>

	* config/rs6000/rtems.h: Set STARTFILE_DEFAULT_SPEC and
	ENDFILE_DEFAULT_SPEC to correctly include ecrti and ecrtn.
	* config/arm/rtems-elf.h: Remove bad -Darm and -Darm_elf.

2001-08-14  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/linux64.h (CPP_PREDEFINES): Define __s390__
	also on 64-bit s390x targets.
 
2001-08-14  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/install.texi (Specific, avr): Fix markup.
	(Specific, c4x): Ditto.
